--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -12,9 +12,10 @@
       "js": ["jquery.min.js", "content.js"]
     }
   ],
-  "permissions":["*://*.facebook.com/*", "tabs"],
+  "permissions":["*://*.facebook.com/*", "tabs","storage","https://ajax.googleapis.com/"],
   "browser_action": 
     {
-     "default_icon": "icon.png"
+     "default_icon": "icon.png",
+     "default_popup": "makeMyXML.html"
     }
 }
